--- a/dotfiles/tmux.conf
+++ b/dotfiles/tmux.conf
@@ -1,9 +1,10 @@
-set-option -g default-terminal screen-256color
+set -g default-terminal "screen-256color"
+set -g terminal-overrides 'xterm:colors=256'
+set -g default-shell   /bin/bash
+set -g default-command /bin/bash
 set -g status-fg white
 set -g status-bg black
-set -g window-style 'bg=colour239'
-set -g window-active-style 'bg=colour235'
 set -g mouse on
-set-option -g status-position top
+set -g status-position top
 set -s escape-time 0
-set-option -g status-interval 1
+set -g status-interval 1
